--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   json_serializable: ^6.2.0
   json_annotation: ^4.5.0
   image_cropper: ^2.0.3
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_lints: ^1.0.0
